# p2p-chat

./: .gitignore  Cargo.toml  LICENSE  planning.md  shell.nix  trace2
docs/: main.typ  ref.bib
src/: main.rs  network.rs  settings.rs  tui.rs
src/db/: migrate_db.rs  migration.sql  mod.rs
src/network/: chat.rs  friends.rs  signable.rs
src/tui/: types.rs  widgets.rs
